actual implementation of google checkstyle